cmake_minimum_required(VERSION 3.1)
project(BreezySLAM)

file(GLOB_RECURSE ${PROJECT_NAME}_C_SOURCES "c/*.c")
list(REMOVE_ITEM ${PROJECT_NAME}_C_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/c/coreslam_armv7l.c)
list(REMOVE_ITEM ${PROJECT_NAME}_C_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/c/coreslam_i686.c)
list(REMOVE_ITEM ${PROJECT_NAME}_C_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/c/coreslam_sisd.c)
file(GLOB_RECURSE ${PROJECT_NAME}_CPP_SOURCES "cpp/*.cpp")
list(REMOVE_ITEM ${PROJECT_NAME}_CPP_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cpp/Laser.cpp)

add_library(${PROJECT_NAME} ${${PROJECT_NAME}_C_SOURCES} ${${PROJECT_NAME}_CPP_SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC c cpp)
